primer ionic(list y detalles)

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "airtable": "^0.12.2",
+    "axios": "^1.6.3",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
